[gd_scene load_steps=11 format=3 uid="uid://bamq47f6ekvtv"]

[ext_resource type="Script" uid="uid://cnoj6jxmts4ix" path="res://script/entity/enemy/creeper.gd" id="1_4gd27"]
[ext_resource type="Script" uid="uid://cy0co16ydd3w" path="res://script/entity/enemy/enemy_entity.gd" id="1_bkgrr"]
[ext_resource type="PackedScene" uid="uid://dc3f34qfqtswh" path="res://prefabs/animation/injured_effect.tscn" id="2_2qe4e"]
[ext_resource type="PackedScene" uid="uid://dpl67feoxnf11" path="res://prefabs/sprite/entity/enemy/explode.tscn" id="2_6mkwm"]
[ext_resource type="Script" uid="uid://bd1oxv0hkmcqm" path="res://script/entity/entity_data.gd" id="2_ugl7j"]
[ext_resource type="Texture2D" uid="uid://d1eyo3ppyofbf" path="res://assets/sprite/entity/enemy/creeper.png" id="3_ugl7j"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_4gd27"]
friction = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2qe4e"]
size = Vector2(80, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gd27"]
size = Vector2(80, 80)

[sub_resource type="CircleShape2D" id="CircleShape2D_4gd27"]
radius = 72.0

[node name="Creeper" type="RigidBody2D"]
collision_layer = 4
mass = 0.1
physics_material_override = SubResource("PhysicsMaterial_4gd27")
can_sleep = false
lock_rotation = true
script = ExtResource("1_4gd27")
explode_scene = ExtResource("2_6mkwm")

[node name="Injured Effect" parent="." node_paths=PackedStringArray("target") instance=ExtResource("2_2qe4e")]
target = NodePath("../Sprite2D")

[node name="EnemyEntity" type="Node" parent="."]
script = ExtResource("1_bkgrr")

[node name="EntityData" type="Node" parent="."]
script = ExtResource("2_ugl7j")
max_health = 20
health = 20
attack = 5
max_velocity_x_abs = 200
constant_force_x_abs = 30

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -9.53674e-07)
scale = Vector2(0.48, 0.48)
texture = ExtResource("3_ugl7j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_2qe4e")

[node name="Entity Area" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entity Area"]
shape = SubResource("RectangleShape2D_4gd27")

[node name="Explode Area" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Explode Area"]
shape = SubResource("CircleShape2D_4gd27")

[connection signal="on_damaged" from="EntityData" to="." method="on_damaged"]
[connection signal="on_death" from="EntityData" to="." method="on_death"]
[connection signal="area_entered" from="Entity Area" to="EnemyEntity" method="on_area_entered"]
[connection signal="area_entered" from="Explode Area" to="." method="on_explode_entered"]
